# CollaBoard

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
collaboard-backend/: Cargo.toml
collaboard-backend/boards/: 2ecde3d1-80b1-4122-a228-03a89d6ea2ba.json  efa993c4-28c6-4589-9cb0-8577aea841b2.json
collaboard-backend/migrations/2024-05-23-123814_users/: up.sql
collaboard-backend/migrations/2024-05-23-125719_boards/: up.sql
collaboard-backend/migrations/2024-05-23-130421_permissions/: down.sql  up.sql
collaboard-backend/migrations/2024-05-23-131852_invitations/: up.sql
collaboard-backend/src/: ctx.rs  dto.rs  email_template.html  error.rs  main.rs  schema.rs
collaboard-backend/src/handlers/: auth_handlers.rs  board_handlers.rs  mod.rs  permission_handlers.rs  ws_handlers.rs
collaboard-frontend/: Cargo.toml  bundle.js  index.html  style.css
collaboard-frontend/src/: excalidraw.js  main.rs  react.js  react.jsx  routes.rs  store.rs
collaboard-frontend/src/api/: board_api.rs  mod.rs  permission_api.rs  user_api.rs
collaboard-frontend/src/components/: board_card.rs  delete_modal.rs  form_input.rs  form_select.rs  mod.rs  new_board_modal.rs  permission_list.rs  permission_list_item.rs  share_modal.rs
collaboard-frontend/src/components/atoms/: form_input.rs  form_select.rs  mod.rs  permission_list_item.rs  toast_notification.rs
collaboard-frontend/src/components/molecules/: board_card.rs  mod.rs  permission_list.rs
collaboard-frontend/src/components/organisms/: delete_modal.rs  mod.rs  new_board_modal.rs  share_modal.rs
collaboard-frontend/src/pages/: accept_invitation_page.rs  board_page.rs  home_page.rs  login_page.rs  mod.rs  not_found_page.rs  register_page.rs
migrations/2024-05-23-130421_permissions/: up.sql
src/: db.rs  dto.rs  error.rs  main.rs  model.rs  schema.rs
src/handlers/: auth_handlers.rs  board_handlers.rs  mod.rs  permission_handlers.rs
src/routes/: mod.rs  mw_auth.rs  permission_routes.rs  routes_user.rs
src/utils/: constants.rs  jwt.rs  mod.rs
src/web/: mod.rs  mw_auth.rs  routes_login.rs  routes_user.rs
temp/: index.html  index.js
tldraw/: package-lock.json  package.json  webpack.config.js
tldraw/public/: index.html
tldraw/src/: App.jsx  index.js
(+8 files in other folders)
