[package]
name = "CollaBoard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["rt", "macros","rt-multi-thread"] }
axum = { version = "0.7.5",features = ["macros"]}
tower-http = {version = "0.5.2", features = ["fs"]}
tower-cookies = "0.10.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0"
lazy-regex = "3.1.0"
async-trait = "0.1.80"
strum_macros = "0.26.2"
uuid = { version = "1.8.0", features = ["v4"] }
jsonwebtoken = "9"
lazy_static = "1.4.0"
dotenv = "0.15.0"
chrono = "0.4.38"
axum-extra = {version = "0.9.3", features = ["typed-header"] }
anyhow = "1.0.86"