[package]
name = "collaboard-frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"]}
yew-router = "0.18.0"
wasm-bindgen = "0.2.69"
web-sys = { version = "0.3", features = ["HtmlSelectElement"] }
js-sys = "0.3"
serde_json = "1.0.118"
gloo = "0.11.0"
stylist = { version = "0.13.0", features = ["yew"] }
serde = { version = "1.0.203", features = ["derive"] }
reqwasm = "0.5.0"
validator = { version = "0.18.1", features = ["derive"] }
yewdux = "0.10.0"
console = "0.15.8"
wasm-bindgen-futures = "0.4.42"
chrono = { version = "0.4.38", features = ["serde"] }
gloo-net = "0.5.0"
futures = "0.3.30"
